--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         ]
     },
     "lint-staged": {
-        "**/*.{js,jsx,ts,tsx,json}": [
+        "**/*.{js,jsx,ts,tsx}": [
             "eslint --fix",
             "prettier --write"
         ]
